ヘッダー修正

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>有限会社ヤタカ物産　建材各種販売</title>
     <link href="/css/reset.css"  rel="stylesheet" />
     <link href="/css/style.css"  rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
-        <div class="header-left">
-            <img src="/img/logo.png" alt="ヤタカ物産ロゴ" class="logo">
-        </div>
+        <h1 class="header-left">
+            <img src="/img/logo.png" alt="有限会社 ヤタカ物産" class="logo">
+        </h1>
         <div class="header-right">
-            <a href="@" class="contact-link">
+            <a href="" class="contact-link">
                 <img src="img/mailbox.png" alt="メールアイコン" class="mailbox">
                 <span class="contact-text">お問い合わせ</span>
             </a>
