--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
             </a>
         </div>
     </header>
+    <footer class="site-footer">
+        <p>© 2025 有限会社ヤタカ物産 All rights reserved.</p>
+    </footer>
 </body>
 </html>
