--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <footer class="site-footer">
-        <p>© 2025 有限会社ヤタカ物産 All rights reserved.</p>
+        <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
     </footer>
 </body>
 </html>
