--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             </a>
         </div>
     </header>
+    <section class="company-info">
+        <div class="info-inner two-col">
+          <div class="info-title">
+            <h2>会社情報</h2>
+          </div>
+      
+          <dl class="info-list">
+            <dt>会社名</dt><dd>有限会社 ヤタカ物産</dd>
+            <dt>所在地</dt><dd>〒379-2156 群馬県前橋市下大島町1371-7</dd>
+            <dt>電話番号</dt><dd>027-263-8009</dd>
+            <dt>代表取締役</dt><dd>矢部 宗雄</dd>
+            <dt>事業内容</dt><dd>建材各種販売・特注家具製造販売</dd>
+          </dl>
+        </div>
+      </section>
+      
     <footer class="site-footer">
         <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
     </footer>
