ご相談・お問い合わせセクション追加

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </a>
         </div>
     </header>
+    
+    <!-- 会社情報 --> 
     <section class="company-info">
         <div class="info-inner two-col">
           <div class="info-title">
@@ -37,6 +39,14 @@
           </dl>
         </div>
       </section>
+
+<!-- ご相談・お問い合わせ -->
+<section class="contact-cta">
+  <div class="cta-inner">
+    <a href="/contact.html" class="cta-link">ご相談・お問い合わせ ＞</a>
+    <span class="cta-arrow" aria-hidden="true"></span>
+  </a>
+</section>
       
     <footer class="site-footer">
         <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
