会社情報・お問い合わせセクション修正

--- a/index.html
+++ b/index.html
@@ -29,23 +29,26 @@
           <div class="info-title">
             <h2>会社情報</h2>
           </div>
-      
-          <dl class="info-list">
-            <dt>会社名</dt><dd>有限会社 ヤタカ物産</dd>
-            <dt>所在地</dt><dd>〒379-2154 群馬県前橋市天川大島町1371-7</dd>
-            <dt>電話番号</dt><dd>027-263-8009</dd>
-            <dt>代表取締役</dt><dd>矢部 宗雄</dd>
-            <dt>事業内容</dt><dd>建材各種販売・特注家具製造販売</dd>
-          </dl>
+
+          <div class="info-list">
+            <dl class="info-list-detail">
+             <dt>会社名</dt><dd>有限会社 ヤタカ物産</dd>
+             <dt>所在地</dt><dd>〒379-2154 <br>群馬県前橋市天川大島町1371-7</br></dd>
+             <dt>電話番号</dt><dd>027-263-8009</dd>
+             <dt>代表取締役</dt><dd>矢部 宗雄</dd>
+             <dt>事業内容</dt><dd>建材各種販売・特注家具製造販売</dd>
+            </dl>
+          </div>
         </div>
       </section>
 
 <!-- ご相談・お問い合わせ -->
 <section class="contact-cta">
   <div class="cta-inner">
-    <a href="/contact.html" class="cta-link">ご相談・お問い合わせ ＞</a>
-    <span class="cta-arrow" aria-hidden="true"></span>
-  </a>
+    <div class="cta-link">
+      <a href="/contact.html">ご相談・お問い合わせ <img src="/img/arrow.png"></a>
+    </div>
+  </div>
 </section>
       
     <footer class="site-footer">
