会社情報・お問い合わせセクション修正10/3

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no" />
     <title>有限会社ヤタカ物産　建材各種販売</title>
     <link href="/css/reset.css"  rel="stylesheet" />
     <link href="/css/style.css"  rel="stylesheet" />
@@ -46,7 +47,7 @@
 <section class="contact-cta">
   <div class="cta-inner">
     <div class="cta-link">
-      <a href="/contact.html">ご相談・お問い合わせ <img src="/img/arrow.png"></a>
+      <h2><a href="/contact.html">ご相談・お問い合わせ <img src="/img/arrow.png" alt=""></a></h2>
     </div>
   </div>
 </section>
