--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    
 </head>
 <body>
     <header class="site-header">
@@ -24,6 +27,25 @@
         </div>
     </header>
     
+<!-- ===== KVセクション ===== -->
+    <!-- Slider main container -->
+  <div class="swiper">
+  <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+    <!-- Slides -->
+      <div class="swiper-slide"><img src="/img/kv-001.jpg" alt="社屋外観（社名看板）"></div>
+      <div class="swiper-slide"><img src="/img/kv-002.jpg" alt="取り扱っているベニヤが積まれた倉庫内の様子"></div>
+      <div class="swiper-slide"><img src="/img/kv-003.jpg" alt="社用車の社名ロゴ"></div>
+    </div>
+  <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+  <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+  </div>
+
     <!-- 会社情報 --> 
     <section class="company-info">
         <div class="info-inner two-col">
@@ -55,5 +77,18 @@
     <footer class="site-footer">
         <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
     </footer>
+
+
+    <!-- body末尾（</body>の直前） -->
+<script>
+  new Swiper('.swiper', {
+    loop: true,
+    effect: 'fade',
+    autoplay: { delay: 3000 },
+    pagination: { el: '.swiper-pagination', clickable: true },
+    navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+  });
+</script>
+
 </body>
 </html>
