scriptを外部ファイルに切り出し

--- a/index.html
+++ b/index.html
@@ -14,19 +14,8 @@
 <!-- script --> 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
-    
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // これが基本の形
-        const swiper = new Swiper('.swiper', {
-          loop: true,
-          effect: 'fade',
-          autoplay: { delay: 3000 },
-        });
-      });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>   
+    <script src="/js/script.js"></script>
 
 </head>
 
