お問い合わせ欄(マージン諸々)

--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
             <!-- 問合せフォーム内容 --> 
             <div class="contact-form">
                 <form action="program.php" method="post">
-                    <div class="form-rows"></div>
+                    <div class="form-rows">
                         <dl class="form-row">
                             <dt><label for="name">お名前 <span class="badge badge-required">必須</span></label></dt>
                             <dd><input id="name" name="name" type="text" required placeholder="群馬　太郎"</dd>
