個人情報規約～送信ボタン追加

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,38 @@
                     </div>
                 </form>
             </div>
+    <!-- 個人情報利用目的 --> 
+        <section class="privacy-section" aria-labelledby="privacy-title">
+            <h3 id="privacy-title" class="privacy-title">個人情報の利用目的</h3>
+            <p class="privacy-lead">
+                お預かりする個人情報は、本人からお問い合わせいただいたご質問等の内容に回答させていただくことを目的として収集し、それ以外に利用することはありません。<br>
+                また、頂いた個人情報を第三者に提供することはありません。<br>
+                その他の当社個人情報取扱い方針につきましては、個人情報保護方針をご覧下さい。<br>
+            </p>
+        <div class="privacy-box" role="region" aria-label="個人情報説明文">
+            <p>
+            当社は本フォームで取得する個人情報（氏名・フリガナ・会社名・メールアドレス・電話番号・お問い合わせ内容・アクセスログ等）を、以下の目的で利用します。<br>
+            <br>
+              1. お問い合わせ内容の確認・回答のため<br>
+              2. ご本人確認ならびに記録保全のため<br>
+              3. サービス品質向上のための集計・分析（個人を特定しない統計処理）<br>
+              4. 法令に基づく開示要請への対応
+            </p>
+            <p>
+              取得した個人情報は上記目的の範囲内でのみ利用し、法令で定める場合を除き第三者へ提供いたしません。
+              取り扱いの詳細はプライバシーポリシーをご確認ください。
+            </p>
         </div>
+        </section>
+    <div class="consent-field">
+        <label class="consent-checkbox">
+          <input type="checkbox" required aria-describedby="privacy-title" />
+          <span class="checkbox-label">個人情報の取り扱いに同意します（必須）</span>
+        </label>
+      </div>
+      <!-- 送信ボタン-->
+      <button type="submit" class="contact-submit">送信する</button>
+    </div>
     </section>
 
 
