個人情報規約～送信ボタン修正

--- a/contact/index.html
+++ b/contact/index.html
@@ -67,14 +67,14 @@
                 </form>
             </div>
     <!-- 個人情報利用目的 --> 
-        <section class="privacy-section" aria-labelledby="privacy-title">
-            <h3 id="privacy-title" class="privacy-title">個人情報の利用目的</h3>
+        <section class="privacy-section">
+            <h3 class="privacy-title">個人情報の利用目的</h3>
             <p class="privacy-lead">
                 お預かりする個人情報は、本人からお問い合わせいただいたご質問等の内容に回答させていただくことを目的として収集し、それ以外に利用することはありません。<br>
                 また、頂いた個人情報を第三者に提供することはありません。<br>
                 その他の当社個人情報取扱い方針につきましては、個人情報保護方針をご覧下さい。<br>
             </p>
-        <div class="privacy-box" role="region" aria-label="個人情報説明文">
+        <div class="privacy-box">
             <p>
             当社は本フォームで取得する個人情報（氏名・フリガナ・会社名・メールアドレス・電話番号・お問い合わせ内容・アクセスログ等）を、以下の目的で利用します。<br>
             <br>
@@ -91,7 +91,7 @@
         </section>
     <div class="consent-field">
         <label class="consent-checkbox">
-          <input type="checkbox" required aria-describedby="privacy-title" />
+          <input type="checkbox" required />
           <span class="checkbox-label">個人情報の取り扱いに同意します（必須）</span>
         </label>
       </div>
