WordPress組み込み内容を反映

--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no" />
-    <title>有限会社ヤタカ物産　建材各種販売</title>
-    <link href="/css/reset.css"  rel="stylesheet" />
-    <link href="/css/common.css"  rel="stylesheet" />
-    <link href="/css/style.css"  rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no" />
+  <title>有限会社ヤタカ物産　建材各種販売</title>
+  <link href="/css/reset.css" rel="stylesheet" />
+  <link href="/css/common.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 
-<!-- script --> 
+  <!-- script -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>   
-    <script src="/js/script.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <script src="/js/script.js"></script>
 
 </head>
 
 <body>
-    <header class="site-header">
-        <h1 class="header-left">
-            <img src="/img/logo.png" alt="有限会社 ヤタカ物産" class="logo">
-        </h1>
-        <div class="header-right">
-            <a href="" class="contact-link">
-                <img src="img/mailbox.png" alt="メールアイコン" class="mailbox">
-                <span class="contact-text">お問い合わせ</span>
-            </a>
-        </div>
-    </header>
-    
-<!-- ===== KVセクション ===== -->
-    <!-- Slider main container -->
+  <header class="site-header">
+    <h1 class="header-left">
+      <img src="/img/logo.png" alt="有限会社 ヤタカ物産" class="logo">
+    </h1>
+    <div class="header-right">
+      <a href="/contact/" class="contact-link">
+        <img src="img/mailbox.png" alt="メールアイコン" class="mailbox">
+        <span class="contact-text">お問い合わせ</span>
+      </a>
+    </div>
+  </header>
+
+  <!-- ===== KVセクション ===== -->
+  <!-- Slider main container -->
   <div class="swiper">
-  <!-- Additional required wrapper -->
+    <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
-    <!-- Slides -->
+      <!-- Slides -->
       <div class="swiper-slide"><img src="/img/kv-001.jpg" alt="社屋外観（社名看板）"></div>
       <div class="swiper-slide"><img src="/img/kv-002.jpg" alt="取り扱っているベニヤが積まれた倉庫内の様子"></div>
       <div class="swiper-slide"><img src="/img/kv-003.jpg" alt="社用車の社名ロゴ"></div>
@@ -46,40 +47,46 @@
 
   </div>
 
-    <!-- 会社情報 --> 
-    <section class="company-info">
-        <div class="info-inner two-col">
-          <div class="info-title">
-            <h2>会社情報</h2>
-          </div>
+  <!-- 会社情報 -->
+  <section class="company-info">
+    <div class="info-inner two-col">
+      <div class="info-title">
+        <h2>会社情報</h2>
+      </div>
 
-          <div class="info-list">
-            <dl class="info-list-detail">
-             <dt>会社名</dt><dd>有限会社 ヤタカ物産</dd>
-             <dt>所在地</dt><dd>〒379-2154 <br>群馬県前橋市天川大島町1371-7</br></dd>
-             <dt>電話番号</dt><dd>027-263-8009</dd>
-             <dt>代表取締役</dt><dd>矢部 宗雄</dd>
-             <dt>事業内容</dt><dd>建材各種販売・特注家具製造販売</dd>
-            </dl>
-          </div>
-        </div>
-      </section>
-
-<!-- ご相談・お問い合わせ -->
-<section class="contact-cta">
-  <div class="cta-inner">
-    <div class="cta-link">
-      <h2><a href="/contact.html">ご相談・お問い合わせ <img src="/img/arrow.png" alt=""></a></h2>
+      <div class="info-list">
+        <dl class="info-list-detail">
+          <dt>会社名</dt>
+          <dd>有限会社 ヤタカ物産</dd>
+          <dt>所在地</dt>
+          <dd>〒379-2154 <br>群馬県前橋市天川大島町1371-7</br></dd>
+          <dt>電話番号</dt>
+          <dd>027-263-8009</dd>
+          <dt>代表取締役</dt>
+          <dd>矢部 宗雄</dd>
+          <dt>事業内容</dt>
+          <dd>建材各種販売・特注家具製造販売</dd>
+        </dl>
+      </div>
     </div>
-  </div>
-</section>
-      
-    <footer class="site-footer">
-        <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
-    </footer>
+  </section>
+
+  <!-- ご相談・お問い合わせ -->
+  <section class="contact-cta">
+    <div class="cta-inner">
+      <div class="cta-link">
+        <h2><a href="/contact/">ご相談・お問い合わせ <img src="/img/arrow.png" alt=""></a></h2>
+      </div>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
+  </footer>
 
 
 
 
 </body>
+
 </html>
