--- a/contact/index.html
+++ b/contact/index.html
@@ -1,25 +1,28 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no" />
     <title>有限会社ヤタカ物産　建材各種販売</title>
-    <link href="/css/reset.css"  rel="stylesheet" />
-    <link href="/css/common.css"  rel="stylesheet" />
-    <link href="/css/contact/style.css"  rel="stylesheet" />
+    <link href="/css/reset.css" rel="stylesheet" />
+    <link href="/css/common.css" rel="stylesheet" />
+    <link href="/css/contact/style.css" rel="stylesheet" />
+    <link href="/css/vendor/contactform7/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="site-header">
         <h1 class="header-left">
             <img src="/img/logo.png" alt="有限会社 ヤタカ物産" class="logo">
         </h1>
         <div class="header-right">
-            <a href="" class="contact-link">
-                <img src="/img/mailbox.png" alt="メールアイコン" class="mailbox">
+            <a href="/contact/" class="contact-link">
+                <img src="img/mailbox.png" alt="メールアイコン" class="mailbox">
                 <span class="contact-text">お問い合わせ</span>
             </a>
         </div>
@@ -35,9 +38,9 @@
                 </p>
             </div>
 
-            <!-- 問合せフォーム内容 --> 
+            <!-- 問合せフォーム内容 -->
             <div class="contact-form">
-                <form action="program.php" method="post">
+                <div class="wpcf7">
                     <div class="form-rows">
                         <dl class="form-row">
                             <dt><label for="name">お名前 <span class="badge badge-required">必須</span></label></dt>
@@ -49,7 +52,8 @@
                         </dl>
                         <dl class="form-row">
                             <dt><label for="company-name">会社名</label></dt>
-                            <dd><input id="company-name" name="company-name" type="text" required placeholder="ぐんま株式会社"></dd>
+                            <dd><input id="company-name" name="company-name" type="text" required placeholder="ぐんま株式会社">
+                            </dd>
                         </dl>
                         <dl class="form-row">
                             <dt><label for="email">メールアドレス<span class="badge badge-required">必須</span></label></dt>
@@ -61,48 +65,172 @@
                         </dl>
                         <dl class="form-row">
                             <dt><label for="consultation">ご相談内容<span class="badge badge-required">必須</span></label></dt>
-                            <dd><textarea id="consultation" name="consultation" required cols="20" rows="10"></textarea></dd>
+                            <dd><textarea id="consultation" name="consultation" required cols="20" rows="10"></textarea>
+                            </dd>
                         </dl>
                     </div>
-                        <!-- 個人情報利用目的 --> 
-                        <section class="privacy-section">
-                            <h3 class="privacy-title">個人情報の利用目的</h3>
-                            <p class="privacy-lead">
+                    <!-- 個人情報利用目的 -->
+                    <section class="privacy-section">
+                        <h3 class="privacy-title">個人情報の利用目的</h3>
+                        <p class="privacy-lead">
                             お預かりする個人情報は、本人からお問い合わせいただいたご質問等の内容に回答させていただくことを目的として収集し、それ以外に利用することはありません。<br>
                             また、頂いた個人情報を第三者に提供することはありません。<br>
                             その他の当社個人情報取扱い方針につきましては、個人情報保護方針をご覧下さい。<br>
-                            </p>
+                        </p>
                         <div class="privacy-box">
-                            <p>
-                            当社は本フォームで取得する個人情報（氏名・フリガナ・会社名・メールアドレス・電話番号・お問い合わせ内容・アクセスログ等）を、以下の目的で利用します。<br>
-                            <br>
-                            1. お問い合わせ内容の確認・回答のため<br>
-                            2. ご本人確認ならびに記録保全のため<br>
-                            3. サービス品質向上のための集計・分析（個人を特定しない統計処理）<br>
-                            4. 法令に基づく開示要請への対応
-                            </p>
-                            <p>
-                            取得した個人情報は上記目的の範囲内でのみ利用し、法令で定める場合を除き第三者へ提供いたしません。
-                            取り扱いの詳細はプライバシーポリシーをご確認ください。
-                            </p>
+                            有限会社ヤタカ物産（以下、「当社」といいます。）は、本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における、ユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。
+
+                            <dl>
+                                <dt>第1条（個人情報）</dt>
+                                <dd>「個人情報」とは、個人情報保護法にいう「個人情報」を指すものとし、生存する個人に関する情報であって、当該情報に含まれる氏名、生年月日、住所、電話番号、連絡先その他の記述等により特定の個人を識別できる情報及び容貌、指紋、声紋にかかるデータ、及び健康保険証の保険者番号などの当該情報単体から特定の個人を識別できる情報（個人識別情報）を指します。
+                                </dd>
+
+                                <dt>第2条（個人情報の収集方法）</dt>
+                                <dd>当社は、ユーザーが利用登録をする際に氏名、生年月日、住所、電話番号、メールアドレス、銀行口座番号、クレジットカード番号、運転免許証番号などの個人情報をお尋ねすることがあります。
+                                    また、ユーザーと提携先などとの間でなされたユーザーの個人情報を含む取引記録や決済に関する情報を,当社の提携先（情報提供元、広告主、広告配信先などを含みます。以下、｢提携先｣といいます。）などから収集することがあります。
+                                </dd>
+
+                                <dt>第3条（個人情報を収集・利用する目的）</dt>
+                                <dd>当社が個人情報を収集・利用する目的は、以下のとおりです。
+                                    <ol>
+                                        <li>当社サービスの提供・運営のため</li>
+                                        <li>ユーザーからのお問い合わせに回答するため（本人確認を行うことを含む）</li>
+                                        <li>ユーザーが利用中のサービスの新機能、更新情報、キャンペーン等及び当社が提供する他のサービスの案内のメールを送付するため</li>
+                                        <li>メンテナンス、重要なお知らせなど必要に応じたご連絡のため</li>
+                                        <li>利用規約に違反したユーザーや、不正・不当な目的でサービスを利用しようとするユーザーの特定をし、ご利用をお断りするため</li>
+                                        <li>ユーザーにご自身の登録情報の閲覧や変更、削除、ご利用状況の閲覧を行っていただくため</li>
+                                        <li>有料サービスにおいて、ユーザーに利用料金を請求するため</li>
+                                        <li>上記の利用目的に付随する目的</li>
+                                    </ol>
+                                </dd>
+
+                                <dt>第4条（利用目的の変更）</dt>
+                                <dd>
+                                    当社は、利用目的が変更前と関連性を有すると合理的に認められる場合に限り、個人情報の利用目的を変更するものとします。
+                                    利用目的の変更を行った場合には、変更後の目的について、当社所定の方法により、ユーザーに通知し、または本ウェブサイト上に公表するものとします。
+                                </dd>
+
+                                <dt>第5条（個人情報の第三者提供）</dt>
+                                <dd>
+                                    <ol>
+                                        <li>当社は、次に掲げる場合を除いて、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。
+                                            ただし、個人情報保護法その他の法令で認められる場合を除きます。
+                                            <ol>
+                                                <li>人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるとき</li>
+                                                <li>公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって、本人の同意を得ることが困難であるとき</li>
+                                                <li>国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき
+                                                </li>
+                                                <li>予め次の事項を告知あるいは公表し、かつ当社が個人情報保護委員会に届出をしたとき
+                                                    <ol>
+                                                        <li>利用目的に第三者への提供を含むこと</li>
+                                                        <li>第三者に提供されるデータの項目</li>
+                                                        <li>第三者への提供の手段または方法</li>
+                                                        <li>本人の求めに応じて個人情報の第三者への提供を停止すること</li>
+                                                        <li>本人の求めを受け付ける方法</li>
+                                                    </ol>
+                                                </li>
+                                            </ol>
+                                        </li>
+
+                                        <li>前項の定めにかかわらず、次に掲げる場合には、当該情報の提供先は第三者に該当しないものとします。
+                                            当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合
+                                            合併その他の事由による事業の承継に伴って個人情報が提供される場合
+                                            個人情報を特定の者との間で共同して利用する場合であって、その旨並びに共同して利用される個人情報の項目、共同して利用する者の範囲、利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名または名称について、あらかじめ本人に通知し、または本人が容易に知り得る状態に置いた場合
+                                        </li>
+                                    </ol>
+                                </dd>
+
+                                <dt>第6条（個人情報の開示）</dt>
+                                <dd>
+                                    <ol>
+                                        <li>当社は、本人から個人情報の開示を求められたときは、本人に対し、遅滞なくこれを開示します。
+                                            ただし、開示することにより次のいずれかに該当する場合は、その全部または一部を開示しないこともあり、開示しない決定をした場合には、その旨を遅滞なく通知します。なお、個人情報の開示に際しては、1件あたり1、000円の手数料を申し受けます。
+                                            <ol>
+                                                <li>本人または第三者の生命、身体、財産その他の権利利益を害するおそれがある場合</li>
+                                                <li>当社の業務の適正な実施に著しい支障を及ぼすおそれがある場合</li>
+                                                <li>その他法令に違反することとなる場合</li>
+                                            </ol>
+                                        </li>
+                                        <li>前項の定めにかかわらず、履歴情報および特性情報などの個人情報以外の情報については、原則として開示いたしません。</li>
+                                    </ol>
+                                </dd>
+
+
+                                <dt>第7条（個人情報の訂正および削除）</dt>
+                                <dd>
+                                    <ol>
+                                        <li>ユーザーは、当社の保有する自己の個人情報が誤った情報である場合には、当社が定める手続きにより、当社に対して個人情報の訂正、追加または削除（以下、「訂正等」といいます。）を請求することができます。
+                                        </li>
+                                        <li>当社は、ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の訂正等を行うものとします。</li>
+                                        <li>当社は、前項の規定に基づき訂正等を行った場合、または訂正等を行わない旨の決定をしたときは遅滞なく、これをユーザーに通知します。</li>
+                                    </ol>
+                                </dd>
+
+                                <dt>第8条（個人情報の利用停止等）</dt>
+                                <dd>
+                                    <ol>
+                                        <li>当社は、本人から、個人情報が、利用目的の範囲を超えて取り扱われているという理由、または不正の手段により取得されたものであるという理由により、その利用の停止または消去（以下、「利用停止等」といいます。）を求められた場合には、遅滞なく必要な調査を行います。
+                                        </li>
+                                        <li>前項の調査結果に基づき、その請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の利用停止等を行います。</li>
+                                        <li>当社は、前項の規定に基づき利用停止等を行った場合、または利用停止等を行わない旨の決定をしたときは、遅滞なく、これをユーザーに通知します。</li>
+                                        <li>前2項にかかわらず、利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって、ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は、この代替策を講じるものとします。
+                                        </li>
+                                    </ol>
+                                </dd>
+
+                                <dt>第9条（プライバシーポリシーの変更）</dt>
+                                <dd>
+                                    <ol>
+                                        <li>本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく、変更することができるものとします。</li>
+                                        <li>当社が別途定める場合を除いて、変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。</li>
+                                    </ol>
+                                </dd>
+
+                                <dt>第10条（お問い合わせ窓口）</dt>
+                                <dd>本ポリシーに関するお問い合わせは、下記の窓口までお願いいたします。
+                                    <div style="margin-top:1em">
+                                        住所：群馬県前橋市天川大島町1371-7
+                                        社名：有限会社 ヤタカ物産
+                                        代表取締役：矢部 宗雄
+                                        電話番号：027-263-8009
+                                    </div>
+
+                                </dd>
+                            </dl>
+                            <p style="text-align:right;margin-top:1em">以上</p>
                         </div>
-                        </section>
-                        <div class="consent-field">
-                            <label class="consent-checkbox">
-                            <input type="checkbox" required />
-                            <span class="checkbox-label">個人情報の取り扱いに同意します（必須）</span>
-                            </label>
-                        </div>
-            <!-- 送信ボタン-->
-                        <button type="submit" class="contact-submit">送信する</button>
-                </form>
-        </div>
+                    </section>
+                    <div class="consent-field">
+                        <p>
+                            <span class="wpcf7-form-control-wrap" data-name="agreement">
+                                <span class="wpcf7-form-control wpcf7-acceptance">
+                                    <span class="wpcf7-list-item">
+                                        <label>
+                                            <input type="checkbox" name="agreement" value="1" aria-invalid="false">
+                                            <span class="wpcf7-list-item-label">個人情報の取り扱いに同意します</span>
+                                        </label>
+                                    </span>
+                                </span>
+                            </span>
+                        </p>
+                    </div>
+                    <!-- 送信ボタン-->
+                    <div class="form-button">
+                        <p>
+                            <input class="contact-submit" type="submit" value="送信">
+                            <span class="wpcf7-spinner"></span>
+                        </p>
+                    </div>
+                    <div class="wpcf7-response-output" aria-hidden="true"></div>
+                </div>
+            </div>
     </section>
 
 
-<footer class="site-footer">
-    <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
-</footer>
+    <footer class="site-footer">
+        <p>&copy; 2025 有限会社ヤタカ物産 All rights reserved.</p>
+    </footer>
 
 </body>
+
 </html>
