WordPress組み込み内容を反映

--- a/contact/index.html
+++ b/contact/index.html
@@ -22,6 +22,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://yataka-bussan.jp/contact/">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+
     <!-- script -->
     <script src="/js/contact/script.js"></script>
 
